WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
206070
Silence compiler warning
https://bugs.webkit.org/show_bug.cgi?id=206070
Summary
Silence compiler warning
Víctor M. Jáquez L.
Reported
2020-01-10 09:12:14 PST
While compiling this warning is shown /opt/webkit/WebKit/Source/WebKit/WebProcess/WebProcess.cpp:762:166: warning: format specifies type 'unsigned long long' but the argument has type 'uint64_t' (aka 'unsigned long') [-Wformat] LOG_ERROR("Unhandled web process message '%s:%s' (destination: %llu)", decoder.messageReceiverName().toString().data(), decoder.messageName().toString().data(), decoder.destinationID()); ~~~~ ^~~~~~~~~~~~~~~~~~~~~~~ %lu
Attachments
Patch
(1.60 KB, patch)
2020-01-10 09:14 PST
,
Víctor M. Jáquez L.
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Víctor M. Jáquez L.
Comment 1
2020-01-10 09:14:39 PST
Created
attachment 387345
[details]
Patch
WebKit Commit Bot
Comment 2
2020-01-10 10:32:16 PST
Comment on
attachment 387345
[details]
Patch Clearing flags on attachment: 387345 Committed
r254347
: <
https://trac.webkit.org/changeset/254347
>
WebKit Commit Bot
Comment 3
2020-01-10 10:32:17 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2020-01-10 10:33:14 PST
<
rdar://problem/58483112
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug