Silence compiler warning https://bugs.webkit.org/show_bug.cgi?id=206070

Patch by Víctor Manuel Jáquez Leal <vjaquez@igalia.com> on 2020-01-10
Reviewed by Chris Dumez.

Silence compiler by using the proper formatter for log out.

No functional changes.

* WebProcess/WebProcess.cpp:
(WebKit::WebProcess::didReceiveMessage):

Canonical link: https://commits.webkit.org/219190@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254347 268f45cc-cd09-0410-ab3c-d52691b4dbfc